--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </form>
         <p id="attempts"></p>
         </div>
-        <div id="guesses">
+        <div id="guessbox">
             <p>Your previous guesses</p>
-            
+            <p id="guesses"></p>
         </div>
     </main>
 
