--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <div id="guessBox">
         <p id="feedback">Enter your guess below & press enter</p>
-        <form name="customForm" id="custom">
+        <form name="customForm" class="guessInput">
             <input type="text" name="guess" placeholder="Enter guess">
         </form>
         <p id="attempts"></p>
