--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </header>
     <main>
         <div id="guessBox">
-        <p id="feedback">Enter your guess below & press enter</p>
+        <h3 id="feedback">Enter your guess below & press enter</h3>
         <form name="customForm" class="guessInput">
-            <input type="text" name="guess" placeholder="Enter guess">
+            <input id="inputBox" type="text" name="guess" placeholder="Enter guess">
         </form>
-        <p id="attempts"></p>
+        <p id="attempts">Number of previous attempts: 0</p>
         </div>
         <div id="guessbox">
             <p>Your previous guesses</p>
