--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <header>
             <div id="logo">
-                <h1>I have a number between 1 and 100.</h1>
+                <h1>I am thinking of a number between 1 and 100.</h1>
                 <h2>Fancy a guess ?</h2>
             </div>
         </header>
@@ -26,7 +26,7 @@
         <p id="attempts">Number of previous attempts: 0</p>
         </div>
         <div id="guessbox">
-            <p>Your previous guesses</p>
+            <p>Your previous guesses:</p>
             <p id="guesses"></p>
         </div>
     </main>
